Changelog
=========

2020.3.0rc4 (unreleased)
------------------------

- Avoid object lookup in DocumentLinkWidget for catalog brains. [buchi]


2020.3.0rc3 (2020-05-22)
------------------------

- Assign permission to role "ServiceKeyUser". [mbaechtold]
- Bump ftw.structlog to 1.3.0 to get SQL query time and view name logging. [lgraf]
- Notify added watchers. [tinagerber]
- Limit query to current repository in RepositoryPathSourceBinder. [njohner]
- Improve performance of the subdossier tree (on the dossier overview tab). [mbaechtold]
- Truncate overflow in keyword and other selection choices. [2e12]
- Improve performance while determining repositoryfolder emptiness. [mbaechtold]
- Improve performance while determining leaf nodes. [mbaechtold]
- Add watcher role to task notification setting tab. [tinagerber]
- The widget used to select users or groups while protecting a business dossier now respects the sharing configuration. [mbaechtold]
- Fix an issue where solr facet labels have not been transformed correctly. [elioschmutz]
- Skip unknown attributes in POST @invitation endpoint. [elioschmutz]
- Add watchers, resources and subscriptions to tasks and forwarding in fixtures. [tinagerber]
- Fix activity bug when creating tasks with tasktemplates. [tinagerber]
- Add basic support for xlsx sources to bundle factory. [deiferni]
- Add new filename column to Favorites. [njohner]
- Implement @possible-watchers endpoint. [elioschmutz]
- Fix dossier link in chrome. [2e12]
- Add `is_admin_menu_visible` to the `@config` API endpoint. [mbaechtold]
- Watchers GET API: Also include info about referenced_users and referenced_watcher_roles. [tinagerber]
- Fix @solrsearch endpoint default sort order. [elioschmutz]
- Bump ftw.bumblebee to 3.9.0 which provides functionality for indexing checksums after bundle import. [buchi]


2020.3.0rc2 (2020-05-07)
------------------------

- Drop sorting by sortable_author for solr and avoid handling sorting parameters as fields. [deiferni]