@@ -1,0 +1,11 @@
+<?xml version="1.0"?>
+<object name="portal_javascripts">
+
+  <javascript id="++resource++opengever.base/contenttree.js"
+  	  insert-after="++resource++plone.formwidget.contenttree/contenttree.js"
+      cacheable="True" compression="none" cookable="True" enabled="True"
+      expression="" inline="False" />
+  <javascript id="++resource++plone.formwidget.contenttree/contenttree.js"
+      remove="True" />
+
+</object>
